Atualizando o arquivo de Configurações

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,4 +4,6 @@ orbs:
 workflows:
     node-tests:
         jobs:
-                - node/test
+	  - node/test
+
+#Comentando o arquivo de configuração
